<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.StartOptionActivity"
    android:contentDescription="@string/start_option_page"
    android:keepScreenOn="true">

    <LinearLayout
        style="@style/OptionList"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/start_formal_teaching"
            style="@style/BlackBlock"
            android:layout_weight="1"
            android:text="@string/start_option1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chooseStartOption" />

        <TextView
            android:id="@+id/start_free_teaching"
            style="@style/WhiteBlock"
            android:layout_weight="1"
            android:text="@string/start_option2"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chooseStartOption" />

        <TextView
            android:id="@+id/start_test"
            style="@style/BlackBlock"
            android:layout_weight="1"
            android:text="@string/start_option3"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chooseStartOption" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>