<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MeasureOptionActivity"
    android:contentDescription="@string/measure_option_page"
    android:keepScreenOn="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/measure_option1"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startTouchMeasure" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/measure_option2"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startMoveMeasure" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/measure_option3"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:onClick="startAngleMeasure" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/go_back"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:onClick="goBack" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>