<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.SizeFormalStudyActivity"
    android:keepScreenOn="true">

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/gesture_detection_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:contentDescription="@string/gesture_detection_area">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:importantForAccessibility="noHideDescendants">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:text="@string/study_goal" />

                <TextView
                    android:id="@+id/study_goal_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:layout_marginTop="24dp"
                    android:text="@string/unknown_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:importantForAccessibility="noHideDescendants">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:text="@string/last_try" />

                <TextView
                    android:id="@+id/last_try_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:layout_marginTop="24dp"
                    android:text="@string/unknown_value" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/white"
            android:contentDescription="@string/switch_footer">

            <TextView
                android:id="@+id/switch_to_single_finger"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:theme="@style/SwitchTab"
                android:text="@string/switch_to_single_finger"
                android:onClick="switchMeasureMethod" />

            <TextView
                android:id="@+id/switch_to_two_fingers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:theme="@style/SwitchTab"
                android:text="@string/switch_to_two_fingers"
                android:onClick="switchMeasureMethod" />

            <TextView
                android:id="@+id/switch_to_one_hand"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:theme="@style/SwitchTab"
                android:text="@string/switch_to_one_hand"
                android:onClick="switchMeasureMethod" />

            <TextView
                android:id="@+id/switch_to_two_hands"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:theme="@style/SwitchTab"
                android:text="@string/switch_to_two_hands"
                android:onClick="switchMeasureMethod" />

            <TextView
                android:id="@+id/switch_to_body"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:theme="@style/SwitchTab"
                android:text="@string/switch_to_body"
                android:onClick="switchMeasureMethod" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>