<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/size_study_preparation_page"
    android:keepScreenOn="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/random_size"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:onClick="randomSize" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/custom_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_size"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/custom_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:hint="@string/custom_size_hint"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/custom_study"
                app:layout_constraintWidth_percent="0.8"
                android:inputType="number"
                android:theme="@style/EditText"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginTop="24sp"
                android:text="@string/confirm_custom"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/custom_input"
                app:layout_constraintWidth_percent="0.8"
                android:background="@drawable/button_background_white"
                android:theme="@style/ConfirmBtn"
                android:onClick="customSize"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/exit_study"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goBack" />

</LinearLayout>