<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:keepScreenOn="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/study_next"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:onClick="studyNext" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/more_times"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:onClick="practiceMore" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/exit_study"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goBack" />

</LinearLayout>