<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.TestActivity"
    android:keepScreenOn="true">

    <android.opengl.GLSurfaceView
        android:id="@+id/gl_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:clickable="false"
        android:focusable="false"/>

    <LinearLayout
        android:id="@+id/test_ui"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/test_target"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/touch_area"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/mark_pose"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:onClick="markPose"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/exit_test"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:onClick="goBack" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>